remove opensb references from banners

--- a/trinium-dark.scss
+++ b/trinium-dark.scss
@@ -1,6 +1,7 @@
 /*!
- * OpenSB Trinium (Finalium 3)
- * Made by Chaziz for OpenSB
+ * Trinium v1.0.0 (https://github.com/bluffingo/trinium)
+ * Copyright 2025 Bluffingo Development
+ * Licensed under MIT (https://github.com/bluffingo/trinium/blob/main/LICENSE)
  */
 
 $theme: "default";
