ok now import the stuff from opensb 2.1 prior to the creation of this repo

--- a/trinium/_header.scss
+++ b/trinium/_header.scss
@@ -20,6 +20,7 @@
             @include maxwidths();
         }
 
+        /*
         .header-button {
             @include responsive('tiny') {
                 display: block;
@@ -33,6 +34,7 @@
                 display: none;
             }
         }
+        */
 
         .header-hidden-links {
             margin-right: 0.5em;
