--- a/trinium/_imports.scss
+++ b/trinium/_imports.scss
@@ -283,7 +283,7 @@ ul.unstyled-list {
 @import 'tabs';
 @import 'table';
 @import 'pagination';
-@import 'hamburger';
+@import 'sidebar';
 @import 'text';
 @import 'navigation_bar';
 
