--- a/trinium/_variables.scss
+++ b/trinium/_variables.scss
@@ -43,7 +43,7 @@ $color-map: (
     "warning": $yellow,
 );
 
-// header/hamburger
+// header/sidebar
 //$header-background: $content-box-background-color;
 
 $header-background: linear-gradient(to bottom, #FFFFFF, #F3F3F3);
