--- a/trinium/_imports.scss
+++ b/trinium/_imports.scss
@@ -206,9 +206,17 @@ hr {
     }
 }
 
-::backdrop {
-    background: black;
-    opacity: 0.6;
+dialog {
+    /* pale moon fix */
+    position: fixed;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+
+    &::backdrop {
+        background: black;
+        opacity: 0.6;
+    }
 }
 
 .userlink-container {
