--- a/trinium-dark.scss
+++ b/trinium-dark.scss
@@ -1,5 +1,5 @@
 /*!
- * Trinium v1.0.0 (https://github.com/bluffingo/trinium)
+ * Trinium DEV (https://github.com/bluffingo/trinium)
  * Copyright 2025 Bluffingo Development
  * Licensed under MIT (https://github.com/bluffingo/trinium/blob/main/LICENSE)
  */
