--- a/trinium/_sidebar.scss
+++ b/trinium/_sidebar.scss
@@ -114,7 +114,7 @@
 
       background: $content-box-background-color;
       border: 1px solid $content-box-border-color;
-      padding-top: $content-box-padding;
+      padding: $content-box-padding 0;
 
       border-radius: 4px;
     }
