--- a/trinium/_variables.scss
+++ b/trinium/_variables.scss
@@ -97,3 +97,7 @@ $profile-intro-height: 90px;
 
 // menus
 $menu-item-padding: 0.4rem 0.8rem;
+
+// sidebar
+$sidebar-width-medium: 180px;
+$sidebar-width-large: 250px;
