--- a/trinium-default.scss
+++ b/trinium-default.scss
@@ -1,5 +1,5 @@
 /*!
- * Trinium DEV (https://github.com/bluffingo/trinium)
+ * Trinium v1.1 (https://github.com/bluffingo/trinium)
  * Copyright 2025 Bluffingo Development
  * Licensed under MIT (https://github.com/bluffingo/trinium/blob/main/LICENSE)
  */
