--- a/trinium/_sections.scss
+++ b/trinium/_sections.scss
@@ -1,5 +1,35 @@
 .section {
     .section-header {
+        .section-header-crumbs {
+            ol {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+            }
+
+            li {
+                display: inline-block;
+                font-size: 1.33em;
+                color: $text-color;
+                font-weight: 600;
+
+                a {
+                    color: $text-color;
+                }
+
+                &:not(:last-child) {
+                    a:after {
+                        font-weight: normal;
+                        display: inline-block;
+                        content: ">";
+                        font-size: 0.8em;
+                        padding: 0 3px 0 6px;
+                    }
+                }
+
+            }
+        }
+
         &.flex {
             display: flex;
             align-items: baseline;
